<resources>
    <string name="app_name">HealthTogether</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="title_activity_main_activitygasf">MainActivitygasf</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_uhu">uhu</string>
    <string name="login">Login</string>
    <string name="entrar">ENTRAR</string>
    <string name="naoTemConta">Não tem conta?</string>
    <string name="cadastreSe">CADASTRE-SE</string>
    <string name="cadastro">Cadastro</string>
    <string name="novoNome">nome</string>
    <string name="novoDataNascimento">data de nascimento</string>
    <string name="cep">cep</string>
    <string name="cpf">cpf</string>
    <string name="confirmarSenha">confirmar senha</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="voltar">VOLTAR</string>
</resources>