<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/voltar"
        android:layout_width="152dp"
        android:layout_height="58dp"
        android:backgroundTint="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/voltar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="193dp"
        android:layout_height="60dp"
        android:backgroundTint="#0CFB24"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/cadastrar"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/voltar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <EditText
        android:id="@+id/novoSenha"
        android:layout_width="206dp"
        android:layout_height="86dp"
        android:autofillHints="postalCode"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="30dp"
        android:singleLine="true"
        android:textColor="#070707"
        android:textColorHighlight="#0CFB24"
        android:gravity="center"
        android:textColorHint="#535353"
        android:textColorLink="#0CFB24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <EditText
        android:id="@+id/novoConfirmarSenha"
        android:layout_width="217dp"
        android:layout_height="86dp"
        android:autofillHints="postalCode"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirmarSenha"
        android:inputType="textPassword"
        android:padding="30dp"
        android:singleLine="true"
        android:textColor="#070707"
        android:textColorHighlight="#0CFB24"
        android:textColorHint="#535353"
        android:textColorLink="#0CFB24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dosis"
        android:gravity="center"
        android:text="@string/cadastro"
        android:textColor="#073507"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/novoCpf"
        android:layout_width="217dp"
        android:layout_height="83dp"
        android:autofillHints="postalCode"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cpf"
        android:inputType="number"
        android:padding="30dp"
        android:singleLine="true"
        android:textColor="#070707"
        android:textColorHighlight="#0CFB24"
        android:textColorHint="#535353"
        android:textColorLink="#0CFB24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/novoCep"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <EditText
        android:id="@+id/novoCep"
        android:layout_width="205dp"
        android:layout_height="83dp"
        android:autofillHints="postalCode"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cep"
        android:inputType="textPostalAddress"
        android:padding="30dp"
        android:singleLine="true"
        android:textColor="#070707"
        android:textColorHighlight="#0CFB24"
        android:textColorHint="#535353"
        android:textColorLink="#0CFB24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <EditText
        android:id="@+id/novoDataNascimento"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/novoDataNascimento"
        android:inputType="date"
        android:padding="30dp"
        android:singleLine="true"
        android:textColor="#070707"
        android:textColorHighlight="#0CFB24"
        android:textColorHint="#535353"
        android:textColorLink="#0CFB24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/novoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@android:color/transparent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:padding="30dp"
        android:singleLine="true"
        android:textColor="#070707"
        android:textColorHighlight="#0CFB24"
        android:textColorHint="#535353"
        android:textColorLink="#0CFB24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <EditText
        android:id="@+id/novoNome"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@android:color/transparent"
        android:hint="@string/novoNome"
        android:inputType="textPersonName"
        android:padding="30dp"
        android:singleLine="true"
        android:textColor="#070707"
        android:textColorHighlight="#0CFB24"
        android:textColorHint="#535353"
        android:textColorLink="#0CFB24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

</androidx.constraintlayout.widget.ConstraintLayout>